<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FirstScreen">

    <ImageView
        android:id="@+id/imgVicphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_photo" />

    <EditText
        android:id="@+id/namaedittx"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/edittext_rounded"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="2dp"
        android:textColorHint="#80686777"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgVicphoto" />

    <EditText
        android:id="@+id/palindromedittx"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_rounded"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:hint="@string/palindrome"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingTop="2dp"
        android:textColorHint="#80686777"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namaedittx" />

    <Button
        android:id="@+id/checkButton"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:layout_marginTop="45dp"
        android:text="@string/check"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/palindromedittx" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkButton" />
</androidx.constraintlayout.widget.ConstraintLayout>